ColorLabs17/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
javadoc
-sourcepath
/Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17
-source
21
-classpath
/Applications/BlueJ.app/Contents/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Java/javafx-web-21.0.3-mac-aarch64.jar:/Applications/BlueJ.app/Contents/Java/javafx-base-21.0.3-mac-aarch64.jar:/Applications/BlueJ.app/Contents/Java/javafx-graphics-21.0.3-mac-aarch64.jar:/Applications/BlueJ.app/Contents/Java/javafx-media-21.0.3-mac-aarch64.jar:/Applications/BlueJ.app/Contents/Java/javafx-fxml-21.0.3-mac-aarch64.jar:/Applications/BlueJ.app/Contents/Java/javafx-swing-21.0.3-mac-aarch64.jar:/Applications/BlueJ.app/Contents/Java/javafx-controls-21.0.3-mac-aarch64.jar:/Applications/BlueJ.app/Contents/Java/junit-4.12.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-params-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-api-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-engine-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-suite-api-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-vintage-engine-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-engine-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-launcher-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-commons-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Java/opentest4j-1.2.0.jar:/Applications/BlueJ.app/Contents/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.base.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.controls.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.fxml.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.graphics.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.media.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.properties.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.swing.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.web.jar:/Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17
-d
/Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
ColorLabs17
-windowtitle
ColorLabs17
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/21/docs/api/
/Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/TestPicture17.java
/Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/SheparFaireyLab.java
/Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/Pixel.java
<---- end of javadoc command ---->
Loading source file /Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/TestPicture17.java...
Loading source file /Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/SheparFaireyLab.java...
Loading source file /Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/Pixel.java...
Constructing Javadoc information...
/Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/Pixel.java:18: error: cannot find symbol
  private DigitalPicture picture;
          ^
  symbol:   class DigitalPicture
  location: class Pixel
/Users/Nithela/Documents/GitHub/colorlabs21-nksenthilanand/ColorLabs17/Pixel.java:35: error: cannot find symbol
  public Pixel(DigitalPicture picture, int x, int y)
               ^
  symbol:   class DigitalPicture
  location: class Pixel
2 errors
